syntax = "proto3";

package barrage;

service AuthCompany {
    rpc Index(IndexRequest) returns (IndexResponse) {}
}

message IndexRequest {
    int32   uid = 1;
    string  worksId = 2;
    string  createTime = 3;
    int32   status = 4;
    int32   offset = 5;
    int32   limit = 6;
}

message Barrage {
    int32  id       = 1;
    string works_id = 2;
    int32  uid      = 3;
    string content  = 4;
    string description = 5;
    int32  status = 6;
    string create_time = 7;
    string update_time = 8;
    int32  is_delete = 9;
    string submit_user_info = 10;
    string submit_type = 11;
    string submit_auth_id = 12;
}

message IndexResponse {
    repeated Barrage data = 12;
    int32 affectedRows = 11;
    int32 total = 13;
}



